# QuizGenerator

./: readme.md
Backend/: .gitignore  main.py  pyproject.toml  requirements.txt
Backend/controllers/: pdfController.py  summarizeController.py
Backend/routes/: quizRoutes.py  summarizeRoutes.py
Backend/schemas/: quizScehma.py  summarySchema.py
Backend/utils/: helpers.py
Frontend/: package-lock.json  package.json  vite.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/api/: api.js
Frontend/src/components/: ConfigureAction.jsx  ContentTypeSelection.jsx  ContentUpload.jsx  QuizSummarizerApp.jsx  Results.jsx  StepIndicator.jsx
Frontend/src/components/configure/: ActionSelection.jsx  QuizConfiguration.jsx  WebSearchQuizConfig.jsx
Frontend/src/components/results/: QuizComplete.jsx  QuizQuestion.jsx  QuizResults.jsx  SummaryResults.jsx
Frontend/src/components/upload/: PDFUpload.jsx  WebSearchUpload.jsx  YouTubeUpload.jsx
Frontend/src/utils/: quizUtils.js
