[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "pydantic>=2.11.7",
    "validators>=0.35.0",
    "youtube-transcript-api>=1.2.1",
    "yt-dlp>=2025.7.21",
]
